--- a/src/librarySystemcodes/DialogAddMagz.form
+++ b/src/librarySystemcodes/DialogAddMagz.form
@@ -194,7 +194,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel5">
           <Properties>
-            <Property name="text" type="java.lang.String" value="MAgazine Date :"/>
+            <Property name="text" type="java.lang.String" value="Magazine Date :"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="btnAddMag">
