--- a/src/librarySystemcodes/LibraryHome.form
+++ b/src/librarySystemcodes/LibraryHome.form
@@ -3768,7 +3768,7 @@
                   <Font name="sansserif" size="12" style="1"/>
                 </Property>
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="ff" green="ff" red="cc" type="rgb"/>
+                  <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                   <Image iconType="3" name="/images/Microsoftwhitel_16.png"/>
@@ -3787,6 +3787,8 @@
                 </Property>
               </Properties>
               <Events>
+                <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnImportMouseEntered"/>
+                <EventHandler event="mouseExited" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnImportMouseExited"/>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnImportActionPerformed"/>
               </Events>
             </Component>
@@ -8155,12 +8157,12 @@
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="labelMagzBorrowed2" min="-2" pref="30" max="-2" attributes="0"/>
-                          <Component id="jLabel103" pref="31" max="32767" attributes="0"/>
+                          <Component id="jLabel103" min="-2" pref="31" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                       <Component id="jPanel28" max="32767" attributes="0"/>
                   </Group>
               </Group>
@@ -8421,6 +8423,10 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="labelMagzBorrowed3" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
+                      <Component id="conditionCheck" min="-2" pref="157" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="comboMaintenance" min="-2" pref="189" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                       <Component id="jButton8" min="-2" pref="144" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
@@ -8434,6 +8440,8 @@
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="labelMagzBorrowed3" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                           <Component id="jButton8" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="comboMaintenance" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="conditionCheck" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
                       <Component id="jPanel42" max="32767" attributes="0"/>
@@ -8658,6 +8666,46 @@
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton8ActionPerformed"/>
+              </Events>
+            </Component>
+            <Component class="javax.swing.JComboBox" name="comboMaintenance">
+              <Properties>
+                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                  <StringArray count="12">
+                    <StringItem index="0" value="select category to display"/>
+                    <StringItem index="1" value="Arts &amp; Recreation"/>
+                    <StringItem index="2" value="Computers, IT &amp; General Works"/>
+                    <StringItem index="3" value="History &amp; Geography"/>
+                    <StringItem index="4" value="Literature"/>
+                    <StringItem index="5" value="Languages"/>
+                    <StringItem index="6" value="Mathematics"/>
+                    <StringItem index="7" value="Philosophy &amp; Psychology"/>
+                    <StringItem index="8" value="Religion"/>
+                    <StringItem index="9" value="Science"/>
+                    <StringItem index="10" value="Social Sciences"/>
+                    <StringItem index="11" value="Technology &amp; Applied Science"/>
+                  </StringArray>
+                </Property>
+              </Properties>
+              <Events>
+                <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="comboMaintenanceItemStateChanged"/>
+              </Events>
+            </Component>
+            <Component class="javax.swing.JComboBox" name="conditionCheck">
+              <Properties>
+                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                  <StringArray count="6">
+                    <StringItem index="0" value="select by condition"/>
+                    <StringItem index="1" value="New"/>
+                    <StringItem index="2" value="Fine"/>
+                    <StringItem index="3" value="Very Good"/>
+                    <StringItem index="4" value="Fair/Acceptable"/>
+                    <StringItem index="5" value="Poor (Needs repair)"/>
+                  </StringArray>
+                </Property>
+              </Properties>
+              <Events>
+                <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="conditionCheckItemStateChanged"/>
               </Events>
             </Component>
           </SubComponents>
