--- a/src/librarySystemcodes/DialogExcelSetup.form
+++ b/src/librarySystemcodes/DialogExcelSetup.form
@@ -3,7 +3,8 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
-    <Property name="title" type="java.lang.String" value="Excel structure help"/>
+    <Property name="title" type="java.lang.String" value="Library Management System"/>
+    <Property name="alwaysOnTop" type="boolean" value="true"/>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
