--- a/src/librarySystemcodes/SettingsDialog.form
+++ b/src/librarySystemcodes/SettingsDialog.form
@@ -3,7 +3,8 @@
 <Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
-    <Property name="title" type="java.lang.String" value="Settings"/>
+    <Property name="title" type="java.lang.String" value="Library Management System"/>
+    <Property name="alwaysOnTop" type="boolean" value="true"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
