done with the categories and company additions in settings

--- a/src/librarySystemcodes/DialogExcelSetup.form
+++ b/src/librarySystemcodes/DialogExcelSetup.form
@@ -53,17 +53,17 @@
                           <Component id="jPanel3" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="jPanel2" min="-2" max="-2" attributes="0"/>
                               <Group type="102" attributes="0">
                                   <Component id="jPanel4" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Component id="jButton1" min="-2" pref="90" max="-2" attributes="0"/>
                               </Group>
+                              <Component id="jPanel2" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                       <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -125,9 +125,9 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
+                  <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jScrollPane1" min="-2" max="-2" attributes="0"/>
+                      <Component id="jScrollPane1" pref="294" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -155,7 +155,7 @@
                     <Property name="editable" type="boolean" value="false"/>
                     <Property name="columns" type="int" value="20"/>
                     <Property name="rows" type="int" value="5"/>
-                    <Property name="text" type="java.lang.String" value="Arts &amp; Recreation&#xa;Computers, IT &amp; General Works&#xa;History &amp; Geography&#xa;Literature&#xa;Languages&#xa;Mathematics&#xa;Philosophy &amp; Psychology&#xa;Religion&#xa;Science&#xa;Social Sciences&#xa;Technology &amp; Applied Science"/>
+                    <Property name="text" type="java.lang.String" value="Enter book categories as set up&#xa;in the system under &#xa;Settings -&gt; Other settings -&gt; Book categories.&#xa;The characters should match with those already&#xa;setup in the system."/>
                   </Properties>
                 </Component>
               </SubComponents>
