--- a/src/librarySystemcodes/EditBookListDialog.form
+++ b/src/librarySystemcodes/EditBookListDialog.form
@@ -391,20 +391,7 @@
               <Color blue="f3" green="ba" red="81" type="rgb"/>
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="12">
-                <StringItem index="0" value="select book category"/>
-                <StringItem index="1" value="Arts &amp; Recreation"/>
-                <StringItem index="2" value="Computers, IT &amp; General Works"/>
-                <StringItem index="3" value="History &amp; Geography"/>
-                <StringItem index="4" value="Literature"/>
-                <StringItem index="5" value="Languages"/>
-                <StringItem index="6" value="Mathematics"/>
-                <StringItem index="7" value="Philosophy &amp; Psychology"/>
-                <StringItem index="8" value="Religion"/>
-                <StringItem index="9" value="Science"/>
-                <StringItem index="10" value="Social Sciences"/>
-                <StringItem index="11" value="Technology &amp; Applied Science"/>
-              </StringArray>
+              <StringArray count="0"/>
             </Property>
           </Properties>
           <AuxValues>
