--- a/src/librarySystemcodes/LibraryHome.form
+++ b/src/librarySystemcodes/LibraryHome.form
@@ -8743,6 +8743,9 @@
                           <StringArray count="0"/>
                         </Property>
                       </Properties>
+                      <Events>
+                        <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="comboCompanyItemStateChanged"/>
+                      </Events>
                     </Component>
                     <Component class="javax.swing.JLabel" name="jLabel116">
                       <Properties>
